src/objects/TAT_Stage_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TAT_Profile_ID__c</fullName>
        <label>TAT Profile ID</label>
        <referenceTo>TAT_Profile__c</referenceTo>
        <relationshipLabel>TAT Stage Profile</relationshipLabel>
        <relationshipName>TAT_Stage_Profile</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TAT_Profile_Spec__c</fullName>
        <label>TAT Profile Spec</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAT_Stage_ID__c</fullName>
        <label>TAT Stage ID</label>
        <referenceTo>TAT_Stage__c</referenceTo>
        <relationshipLabel>TAT Stage Profile</relationshipLabel>
        <relationshipName>TAT_Stage_Profile</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TAT_Stage_Profile_Description__c</fullName>
        <label>TAT Stage Profile Description</label>
        <type>TextArea</type>
    </fields>
    <label>TAT Stage Profile</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TAT_Profile_ID__c</columns>
        <columns>TAT_Stage_ID__c</columns>
        <columns>TAT_Profile_Spec__c</columns>
        <columns>TAT_Stage_Profile_Description__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TAT Stage Profile</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>